Changed to Java 11 and added some JUnit tests